Settings Fuck-up

--- a/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
@@ -62,11 +62,8 @@
 
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="94*"/>
-                    <ColumnDefinition Width="3*"/>
-                    <ColumnDefinition Width="19*"/>
-                    <ColumnDefinition Width="21.594"/>
-                    <ColumnDefinition Width="8.563"/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="30"/>
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
                     <RowDefinition/>
@@ -78,9 +75,9 @@
                     <RowDefinition Height="30"/>
                 </Grid.RowDefinitions>
 
-                <TextBlock Text="Stock Management" Style="{StaticResource TextblockTitle}" Grid.ColumnSpan="5" Margin="0,0,-0.031,0.377"/>
-                <TextBlock Text="Stock List" Grid.Row="4" Grid.ColumnSpan="5" Style="{StaticResource TextUnderTitle}" Margin="0,0.263,-0.031,0.622"/>
-                <ListView x:Name="StockListView" Grid.Row="5" ItemsSource="{Binding CurrentUser.StockQuantities}" SelectedItem="{Binding SelectedStockQuantityIngredient}" Grid.ColumnSpan="5" Margin="0,1.378,-0.031,28.905" Grid.RowSpan="2">
+                <TextBlock Text="Stock Management" Style="{StaticResource TextblockTitle}" Grid.ColumnSpan="2"/>
+                <TextBlock Text="Stock List" Grid.Row="4" Grid.ColumnSpan="2" Style="{StaticResource TextUnderTitle}"/>
+                <ListView x:Name="StockListView" Grid.Row="5" ItemsSource="{Binding CurrentUser.StockQuantities}" SelectedItem="{Binding SelectedStockQuantityIngredient}" Grid.ColumnSpan="2">
                     <ListView.View>
                         <GridView>
                             <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Ingredient}" />
@@ -94,16 +91,16 @@
                         </GridView>
                     </ListView.View>
                 </ListView>
-                <Button Style="{StaticResource ButtonIconTemplate}" Command="{Binding RemoveStockIngredientCommand}" Grid.Row="6" Grid.Column="3" Grid.ColumnSpan="2" Margin="2.188,2.236,1.969,0.905">
+                <Button Style="{StaticResource ButtonIconTemplate}" Command="{Binding RemoveStockIngredientCommand}" Grid.Row="6" Grid.Column="1">
                     <Button.Background>
                         <ImageBrush ImageSource="../Images/minusIcon.png" Stretch="Uniform"/>
                     </Button.Background>
                 </Button>
 
-                <TextBlock Text="Add a new stock ingredient" Style="{StaticResource TextUnderTitle}" Grid.ColumnSpan="5" Margin="0,22,-0.031,15.413" Grid.RowSpan="3"/>
-                <TextBlock Text="Name" Grid.Row="2" Grid.ColumnSpan="4" Margin="0,0.603,21.424,3.413"/>
+                <TextBlock Text="Add a new stock ingredient" Grid.Row="1" Style="{StaticResource TextUnderTitle}" Grid.ColumnSpan="2"/>
+                <TextBlock Text="Name" Grid.Row="2"/>
 
-                <UserControls:IngredientAutoComplete SelectItemCommand="{Binding AddNewStockIngredientCommand}" MaximumItems="5" Grid.Row="3" Margin="0,0.587,103.969,17.622" Grid.RowSpan="2"/>
+                <UserControls:IngredientAutoComplete SelectItemCommand="{Binding AddNewStockIngredientCommand}" MaximumItems="5" Grid.Row="3" Grid.ColumnSpan="2" Margin="0,0,200,0"/>
             </Grid>
 
             <Grid>
