--- a/FoodPlanner/FoodPlanner/Views/ShoppingListPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/ShoppingListPage.xaml
@@ -50,7 +50,7 @@
                 <ImageBrush ImageSource="/FoodPlanner;component/Images/completeShoppingListIcon.png"/>
             </Button.Background>
         </Button>
-        <TextBlock TextWrapping="Wrap" TextAlignment="Center" Background="WhiteSmoke" 
+        <TextBlock TextWrapping="Wrap" TextAlignment="Center" Background="WhiteSmoke" Style="{StaticResource TextblockTitle}" 
                    Text="{Binding Path=ShopAhead, Source={x:Static local:App.CurrentUser}, StringFormat='You are shopping for the next: {0} days'}"/>
 
         <Border Grid.Column="0"  BorderThickness=" 2,2,1,2" BorderBrush="Black" Grid.ColumnSpan="2" Margin="1,0,29.11,0.157"/>
