--- a/FoodPlanner/FoodPlanner/UserControls/SlidePanel.xaml
+++ b/FoodPlanner/FoodPlanner/UserControls/SlidePanel.xaml
@@ -4,90 +4,51 @@
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:FoodPlanner"
+    xmlns:system="clr-namespace:System;assembly=mscorlib"
 	xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
 	mc:Ignorable="d"
 	x:Class="FoodPlanner.UserControls.SlidePanel"
 	x:Name="UserControl"
-	d:DesignWidth="405" d:DesignHeight="115">
+	d:DesignWidth="405" d:DesignHeight="40">
 
-	<Grid x:Name="LayoutRoot">
-		<VisualStateManager.VisualStateGroups>
-			<VisualStateGroup x:Name="HideShowSlidePannel" ei:ExtendedVisualStateManager.UseFluidLayout="True">
-				<VisualStateGroup.Transitions>
-					<VisualTransition GeneratedDuration="0:0:0.3"/>
-				</VisualStateGroup.Transitions>
-				<VisualState x:Name="HideSlidePannel"/>
-				<VisualState x:Name="ShowSlidePannel">
-					<Storyboard>
-						<ThicknessAnimationUsingKeyFrames Storyboard.TargetProperty="(FrameworkElement.Margin)" Storyboard.TargetName="SlidePannel">
-							<EasingThicknessKeyFrame KeyTime="0" Value="0,0,0,0"/>
-						</ThicknessAnimationUsingKeyFrames>
-					</Storyboard>
-				</VisualState>
-			</VisualStateGroup>
-		</VisualStateManager.VisualStateGroups>
-		<VisualStateManager.CustomVisualStateManager>
-			<ei:ExtendedVisualStateManager/>
-		</VisualStateManager.CustomVisualStateManager>
-		<StackPanel x:Name="SlidePannel" VerticalAlignment="Bottom" RenderTransformOrigin="0.5,0.5" Margin="0,0,0,-81">
-			<StackPanel.RenderTransform>
-				<TransformGroup>
-					<ScaleTransform/>
-					<SkewTransform/>
-					<RotateTransform/>
-					<TranslateTransform/>
-				</TransformGroup>
-			</StackPanel.RenderTransform>
-			<Grid x:Name="SlideButtonsGrid" VerticalAlignment="Bottom" Height="115">
-				<i:Interaction.Triggers>
-					<i:EventTrigger EventName="MouseEnter">
-						<ei:GoToStateAction x:Name="ShowSlidePannelAction" StateName="ShowSlidePannel"/>
-					</i:EventTrigger>
-					<i:EventTrigger EventName="MouseLeave">
-						<ei:GoToStateAction x:Name="HideSlidePannelAction" StateName="HideSlidePannel"/>
-					</i:EventTrigger>
-				</i:Interaction.Triggers>
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition Width="*"/>
-					<ColumnDefinition Width="*"/>
-					<ColumnDefinition Width="*"/>
-					<ColumnDefinition Width="*"/>
-					<ColumnDefinition Width="*"/>
-				</Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="81"/>
-                </Grid.RowDefinitions>
+    <Grid x:Name="LayoutRoot" Background="Black" Height="40">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
 
-                <Grid Background="Black" Grid.Row="0" Grid.RowSpan="1" Grid.ColumnSpan="5"/>
-                <Grid Background="White" Grid.Row="1" Grid.RowSpan="1" Grid.ColumnSpan="5"/>
-
-                <Button Margin="5" Grid.Row="1" Grid.Column="0" Style="{StaticResource ButtonIconTemplate}" Command="{Binding Source={x:Static local:Navigator.GoToMealPlanCommand}}">
-                    <Button.Background>
-                        <ImageBrush ImageSource="../Images/Calender.png"/>
-                    </Button.Background>
-                </Button>
-                <Button Margin="5" Grid.Row="1" Grid.Column="1" Style="{StaticResource ButtonIconTemplate}" Command="{Binding Source={x:Static local:Navigator.GoToRecipeSearchCommand}}">
-                    <Button.Background>
-						<ImageBrush ImageSource="../Images/Foodplan.png"/>
-					</Button.Background>
-				</Button>
-                <Button Margin="5" Grid.Row="1" Grid.Column="2" Style="{StaticResource ButtonIconTemplate}" Command="{Binding Source={x:Static local:Navigator.GoToShoppingListCommand}}">
-                    <Button.Background>
-						<ImageBrush ImageSource="../Images/Shoppinglist.png"/>
-					</Button.Background>
-				</Button>
-                <Button Margin="5" Grid.Row="1" Grid.Column="3" Style="{StaticResource ButtonIconTemplate}" Command="{Binding Source={x:Static local:Navigator.GoToInventoryCommand}}">
-                    <Button.Background>
-                        <ImageBrush ImageSource="../Images/refrigeratorIcon.png"/>
-					</Button.Background>
-				</Button>
-                <Button Margin="5" Grid.Row="1" Grid.Column="4" Style="{StaticResource ButtonIconTemplate}" Command="{Binding Source={x:Static local:Navigator.GoToSettingsCommand}}">
-                        <Button.Background>
-                            <ImageBrush ImageSource="../Images/Settings.png"/>
-					</Button.Background>
-				</Button>
-			</Grid>
-		</StackPanel>
-	</Grid>
+        <Button Grid.Column="0" Style="{StaticResource SlidemenuButtonIconTemplate}" Command="{Binding Source={x:Static local:Navigator.GoToMealPlanCommand}}">
+            <Button.Resources>
+                <ImageSource x:Key="Image">../Images/Calender.png</ImageSource>
+                <system:String x:Key="ImageText">Calender</system:String>
+            </Button.Resources>
+        </Button>
+        <Button Grid.Column="1" Style="{StaticResource SlidemenuButtonIconTemplate}" Command="{Binding Source={x:Static local:Navigator.GoToRecipeSearchCommand}}">
+            <Button.Resources>
+                <ImageSource x:Key="Image">../Images/Foodplan.png</ImageSource>
+                <system:String x:Key="ImageText">Foodplan</system:String>
+            </Button.Resources>
+        </Button>
+        <Button Grid.Column="2" Style="{StaticResource SlidemenuButtonIconTemplate}" Command="{Binding Source={x:Static local:Navigator.GoToShoppingListCommand}}">
+            <Button.Resources>
+                <ImageSource x:Key="Image">../Images/Shoppinglist.png</ImageSource>
+                <system:String x:Key="ImageText">Shoppinglist</system:String>
+            </Button.Resources>
+        </Button>
+        <Button Grid.Column="3" Style="{StaticResource SlidemenuButtonIconTemplate}" Command="{Binding Source={x:Static local:Navigator.GoToInventoryCommand}}">
+            <Button.Resources>
+                <ImageSource x:Key="Image">../Images/refrigeratorIcon.png</ImageSource>
+                <system:String x:Key="ImageText">Inventory</system:String>
+            </Button.Resources>
+        </Button>
+        <Button Grid.Column="4" Style="{StaticResource SlidemenuButtonIconTemplate}" Command="{Binding Source={x:Static local:Navigator.GoToSettingsCommand}}">
+            <Button.Resources>
+                <ImageSource x:Key="Image">../Images/Settings.png</ImageSource>
+                <system:String x:Key="ImageText">Settings</system:String>
+            </Button.Resources>
+        </Button>
+    </Grid>
 </UserControl>
