--- a/FoodPlanner/FoodPlanner/App.xaml
+++ b/FoodPlanner/FoodPlanner/App.xaml
@@ -64,8 +64,8 @@
                         <Border Name="Border" BorderBrush="Transparent" Padding="0" Margin="0" Background="Black">
                             <Grid>
                                 <Grid.RowDefinitions>
-                                    <RowDefinition Height="30"/>
-                                    <RowDefinition Height="10"/>
+                                    <RowDefinition Height="30*"/>
+                                    <RowDefinition Height="10*"/>
                                 </Grid.RowDefinitions>
                                 <Image Grid.Row="0" Margin="5,5,5,5" Source="{DynamicResource ResourceKey=Image}" Stretch="Uniform" />
                                 <TextBlock Grid.Row="1" Text="{DynamicResource ResourceKey=ImageText}" Foreground="White" FontSize="10" Padding="0" Margin="0,-4,0,0" HorizontalAlignment="Center"/>
