--- a/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
@@ -209,7 +209,7 @@
                     <ColumnDefinition Width="30"/>
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Text="Direts" Style="{StaticResource TextblockTitle}" Grid.Row="0" Grid.ColumnSpan="1"/>
+                <TextBlock Text="Diets" Style="{StaticResource TextblockTitle}" Grid.Row="0" Grid.ColumnSpan="1"/>
                 <TextBlock Text="{Binding CurrentDiet}" Style="{StaticResource TextblockTitle}" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2"/>
 
                 <ListView SelectedItem="{Binding SelectedDietPreset}" ItemsSource="{Binding Path=ListOfDiets}" Grid.Row="1" Grid.ColumnSpan="3">
