--- a/FoodPlanner/FoodPlanner/Views/RecipeSearchPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/RecipeSearchPage.xaml
@@ -31,13 +31,10 @@
                 <ImageBrush ImageSource="/Images/searchIcon.png" Stretch="Uniform"/>
             </Label.Background>
         </Label>
-
-        <ComboBox Grid.Column="2"/>
         
-        <TextBox Grid.Column="1" FontSize="18" Name="Search" Text="{Binding Path=SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Delay=1000}"/>
+        <TextBox Grid.Column="1" Grid.ColumnSpan="2" FontSize="18" Name="Search" Text="{Binding Path=SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Delay=1000}"/>
         <Border Grid.Column="0"  BorderThickness=" 2,2,1,2" BorderBrush="Black"/>
-        <Border Grid.Column="1"  BorderThickness=" 1,2,1,2" BorderBrush="Black" Grid.ColumnSpan="2" Margin="1,0,24,0"/>
-        <Border Grid.Column="2"  BorderThickness=" 1,2,2,2" BorderBrush="Black"/>
+        <Border Grid.Column="1"   BorderThickness=" 1,2,1,2" BorderBrush="Black" Grid.ColumnSpan="5" Margin="1,0,2,0"/>
         <ListBox Name="recipeListBox" Grid.Row="1" Grid.ColumnSpan="3" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ItemTemplate="{StaticResource ListRecipesTemplate}"  ItemsSource="{Binding Path=listOfSearchResults, Mode=OneWay}">
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="MouseUp">
