noget med settings

--- a/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
+++ b/FoodPlanner/FoodPlanner/Views/SettingsPage.xaml
@@ -142,9 +142,8 @@
                     </Button.Background>
                 </Button>
 
-
                 <TextBlock Text="Rated ingredients list" Style="{StaticResource TextUnderTitle}" Grid.Row="7" Grid.ColumnSpan="2"/>
-                <ListView SelectedItem="{Binding SelectedGreyListIngredient}" ItemsSource="{Binding Path=CurrentUser.GraylistIngredientsWithoutDiets}" Grid.Row="8" Grid.ColumnSpan="3">
+                <ListView SelectedItem="{Binding SelectedGreyListIngredient}" ItemsSource="{Binding Path=GraylistIngredientsWithoutDiets}" Grid.Row="8" Grid.ColumnSpan="3">
                     <ListView.View>
                         <GridView>
                             <GridViewColumn Header="Name" Width="Auto" DisplayMemberBinding="{Binding Ingredient}" />
@@ -178,7 +177,7 @@
 
                 <TextBlock Text="Unwanted Ingredients" Style="{StaticResource TextblockTitle}" Grid.ColumnSpan="2"/>
                 <TextBlock Text="Unwanted ingredients list" Style="{StaticResource TextUnderTitle}" Grid.Row="4" Grid.ColumnSpan="2"/>
-                <ListView SelectedItem="{Binding SelectedBlackListIngredient}" ItemsSource="{Binding Path=CurrentUser.BlacklistIngredientsWithoutDiets}" Grid.Row="5" Grid.ColumnSpan="3">
+                <ListView SelectedItem="{Binding SelectedBlackListIngredient}" ItemsSource="{Binding Path=BlacklistIngredientsWithoutDiets}" Grid.Row="5" Grid.ColumnSpan="3">
                     <ListView.View>
                         <GridView>
                             <GridViewColumn Header="Name" Width="Auto" DisplayMemberBinding="{Binding Ingredient}"/>
